feat: get recipes route
